# MyBudget

./: run.sh
deploy/: docker-compose.yml
deploy/docker/: Dockerfile
front/: Dockerfile  README.md  myindex.py  pyproject.toml  run.sh
front/components/: sidebar.py
